[package]
name = "iron_sandboxide"
version = "0.1.1"
authors = ["CJ McAllister <cjm571@gmail.com>"]

[dependencies]
cast_iron = { path = "../cast_iron", version = "0.1.2" }
piston = "0.38.0"
piston2d-graphics = "0.27.0"
pistoncore-glutin_window = "0.49.0"
piston2d-opengl_graphics = "0.55.0"
lazy_static = "1.2.0"